fix redirect security issue

--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -201,13 +201,21 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
+
+        <section class="wrapper">
+          <div class='inner'>
+          <div>Already purchased?</div>
+          <a id='retrieve' class='btn btn-primary'>Retrieve License</a>
+        </div>
+        </section>
+
+
     <header class="major">
       <center>
         <h2>Upgrade Vysor</h2>
         <h4 id='used'></h4>
       </center>
     </header>
-
 
     <section id="plans" class="wrapper">
       <div class="plans-outer">
@@ -374,9 +382,5 @@
         </div>
       </div>
     </section>
-    <div style='float: right;'>
-      <div>Already purchased?</div>
-      <a id='retrieve' class='btn btn-primary'>Retrieve License</a>
-    </div>
   </body>
 </html>
