--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -248,11 +248,11 @@
                 </div>
               </div>
 
-              <div id='display-settings-container' class='hidden'>
+              <div id='display-settings-container'>
                 <label>Display Settings</label>
                 <div class='well'>
-                  <label>Size and Density</label>
-                  <select id='display-settings' class="form-control">
+                  <label class='hidden'>Size and Density</label>
+                  <select id='display-settings' class="form-control hidden">
                   </select>
 
                   <div class="checkbox">
