--- a/public/server/index.html
+++ b/public/server/index.html
@@ -27,7 +27,7 @@
 					<h5 class='instructions'>Someone is trying to share their Android devices with you.</h5>
 					<h5 class='instructions2'>Download the Vysor Chrome app to connect.</h5>
 					<ul class="actions">
-						<li><a href="javascript:openDownload()" class="button special icon fa-download">Download Vysor</a></li>
+						<li><a href="javascript:openDownload('server')" class="button special icon fa-download">Download Vysor</a></li>
             <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
 					</ul>
 				</div>
