--- a/public/app/list.html
+++ b/public/app/list.html
@@ -123,11 +123,11 @@
                   </div>
                 </div>
 
-                <div id='display-settings-container' class='hidden'>
+                <div id='display-settings-container'>
                   <label>Display Settings</label>
                   <div class='well'>
-                    <label>Size and Density</label>
-                    <select id='display-settings' class="form-control">
+                    <label class='hidden'>Size and Density</label>
+                    <select id='display-settings' class="form-control hidden">
                     </select>
 
                     <div class="checkbox">
@@ -251,7 +251,6 @@
           <p>
             <a class='purchase' id='used' name="used"></a>
           </p>
-          <p><img class='purchase' src='payment/cards.png' style="max-height: 40px;"></img></p>
         </div>
         <div id='login-container'>
           <p id='login-line'>
@@ -275,7 +274,7 @@
           <p>
             <span id='login-email'></span>
             <span> - </span>
-            <a id='account-management' target='_blank'></a>
+            <span id='account-management-info'></span><span> </span><a id='account-management' target='_blank'></a>
           </p>
         </div>
         <div id='desktop-app'><p><a href='https://plus.google.com/110558071969009568835/posts/Ub7QKu2Pddu' target='_blank'>Get the standalone Vysor desktop app for better performance!</a></p></div>
